--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -19,7 +19,7 @@
     --white: #fff;
     --gray: #62718d;
     --gDark: #132244;
-    --gray-dark: #06163a;
+    --gray-dark: #286b82;
     --primary: #132244;
     --secondary: #0067da;
     --success: #77a464;
@@ -29,7 +29,7 @@
     --light: #f8f5f4;
     --lDark: #202b5d;
     --gDark: #132244;
-    --dark: #06163a;
+    --dark: #286b82;
     --breakpoint-xs: 0;
     --breakpoint-sm: 576px;
     --breakpoint-md: 768px;
@@ -369,7 +369,7 @@ h1, h2, h3, h4, h5, h6,
     font-family: "Cabin", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     font-weight: 700;
     line-height: 1.2;
-    color: #202b5d;
+    color: #286b82;
 }
 
 h1, .h1 {
@@ -3196,7 +3196,7 @@ pre code {
     font-size: 1.125rem;
     font-weight: "Cabin", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     line-height: 1.5;
-    color: #06163a;
+    color: #286b82;
     background-color: #fff;
     background-clip: padding-box;
     border: 1px solid #e5e5e5;
@@ -3218,12 +3218,12 @@ pre code {
 }
 .form-control:-moz-focusring {
     color: transparent;
-    text-shadow: 0 0 0 #06163a;
+    text-shadow: 0 0 0 #286b82;
 }
 .form-control:focus {
-    color: #06163a;
+    color: #286b82;
     background-color: #fff;
-    border-color: #06163a;
+    border-color: #286b82;
     outline: 0;
     -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0), 0 0 0 0 rgba(0, 103, 218, 0);
             box-shadow: 0 0 10px rgba(0, 0, 0, 0), 0 0 0 0 rgba(0, 103, 218, 0);
@@ -3263,7 +3263,7 @@ input[type=month].form-control {
 }
 
 select.form-control:focus::-ms-value {
-    color: #06163a;
+    color: #286b82;
     background-color: #fff;
 }
 
@@ -4021,8 +4021,8 @@ fieldset:disabled a.btn {
 
 .btn-dark {
     color: #fff;
-    background-color: #06163a;
-    border-color: #06163a;
+    background-color: #286b82;
+    border-color: #286b82;
     -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0);
             box-shadow: 0 0 10px rgba(0, 0, 0, 0);
 }
@@ -4040,8 +4040,8 @@ fieldset:disabled a.btn {
 }
 .btn-dark.disabled, .btn-dark:disabled {
     color: #fff;
-    background-color: #06163a;
-    border-color: #06163a;
+    background-color: #286b82;
+    border-color: #286b82;
 }
 .btn-dark:not(:disabled):not(.disabled):active, .btn-dark:not(:disabled):not(.disabled).active, .show > .btn-dark.dropdown-toggle {
     color: #fff;
@@ -4081,13 +4081,13 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-secondary {
-    color: #06163a;
-    border-color: #06163a;
+    color: #286b82;
+    border-color: #286b82;
 }
 .btn-outline-secondary:hover {
     color: #fff;
-    background-color: #06163a;
-    border-color: #06163a;
+    background-color: #286b82;
+    border-color: #286b82;
 }
 .btn-outline-secondary:focus, .btn-outline-secondary.focus {
     -webkit-box-shadow: 0 0 0 0 rgba(0, 103, 218, 0.5);
@@ -4297,26 +4297,26 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-dark {
-    color: #06163a;
-    border-color: #06163a;
+    color: #286b82;
+    border-color: #286b82;
 }
 .btn-outline-dark:hover {
     color: #fff;
-    background-color: #06163a;
-    border-color: #06163a;
+    background-color: #286b82;
+    border-color: #286b82;
 }
 .btn-outline-dark:focus, .btn-outline-dark.focus {
     -webkit-box-shadow: 0 0 0 0 rgba(6, 22, 58, 0.5);
             box-shadow: 0 0 0 0 rgba(6, 22, 58, 0.5);
 }
 .btn-outline-dark.disabled, .btn-outline-dark:disabled {
-    color: #06163a;
+    color: #286b82;
     background-color: transparent;
 }
 .btn-outline-dark:not(:disabled):not(.disabled):active, .btn-outline-dark:not(:disabled):not(.disabled).active, .show > .btn-outline-dark.dropdown-toggle {
     color: #fff;
-    background-color: #06163a;
-    border-color: #06163a;
+    background-color: #286b82;
+    border-color: #286b82;
 }
 .btn-outline-dark:not(:disabled):not(.disabled):active:focus, .btn-outline-dark:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-dark.dropdown-toggle:focus {
     -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0), 0 0 0 0 rgba(6, 22, 58, 0.5);
@@ -5091,7 +5091,7 @@ input[type=button].btn-block {
     font-size: 1.125rem;
     font-weight: "Cabin", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     line-height: 1.5;
-    color: #06163a;
+    color: #286b82;
     vertical-align: middle;
     background: #fff url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='5' viewBox='0 0 4 5'%3e%3cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/8px 10px;
     border: 1px solid #e5e5e5;
@@ -5103,13 +5103,13 @@ input[type=button].btn-block {
             appearance: none;
 }
 .custom-select:focus {
-    border-color: #06163a;
+    border-color: #286b82;
     outline: 0;
     -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0), 0 0 0 0 rgba(0, 103, 218, 0);
             box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0), 0 0 0 0 rgba(0, 103, 218, 0);
 }
 .custom-select:focus::-ms-value {
-    color: #06163a;
+    color: #286b82;
     background-color: #fff;
 }
 .custom-select[multiple], .custom-select[size]:not([size="1"]) {
@@ -5126,7 +5126,7 @@ input[type=button].btn-block {
 }
 .custom-select:-moz-focusring {
     color: transparent;
-    text-shadow: 0 0 0 #06163a;
+    text-shadow: 0 0 0 #286b82;
 }
 
 .custom-select-sm {
@@ -6081,7 +6081,7 @@ input[type=button].btn-block {
     color: rgba(0, 0, 0, 0.9);
 }
 .navbar-light .navbar-nav .nav-link {
-    color: #202b5d;
+    color: #fff;
 }
 .navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
     color: #0067da;
@@ -6682,7 +6682,7 @@ a.badge-gDark:focus, a.badge-gDark.focus {
 
 .badge-dark {
     color: #fff;
-    background-color: #06163a;
+    background-color: #286b82;
 }
 a.badge-dark:hover, a.badge-dark:focus {
     color: #fff;
@@ -8356,7 +8356,7 @@ button.bg-gDark:focus {
 }
 
 .bg-dark {
-    background-color: #06163a !important;
+    background-color: #286b82 !important;
 }
 
 a.bg-dark:hover, a.bg-dark:focus,
@@ -8450,7 +8450,7 @@ button.bg-dark:focus {
 }
 
 .border-dark {
-    border-color: #06163a !important;
+    border-color: #286b82 !important;
 }
 
 .border-white {
@@ -18799,7 +18799,7 @@ button.bg-dark:focus {
     }
     .mb-md-13,
     .my-md-13 {
-        margin-bottom: 65px !important;
+        margin-bottom: 30px !important;
     }
     .ml-md-13,
     .mx-md-13 {
@@ -22259,7 +22259,7 @@ button.bg-dark:focus {
     }
     .mb-lg-12,
     .my-lg-12 {
-        margin-bottom: 60px !important;
+        margin-bottom: 30px !important;
     }
     .ml-lg-12,
     .mx-lg-12 {
@@ -30197,7 +30197,7 @@ button.bg-dark:focus {
     }
     .pt-xl-3,
     .py-xl-3 {
-        padding-top: 16px !important;
+        padding-top: 5px !important;
     }
     .pr-xl-3,
     .px-xl-3 {
@@ -30205,7 +30205,7 @@ button.bg-dark:focus {
     }
     .pb-xl-3,
     .py-xl-3 {
-        padding-bottom: 16px !important;
+        padding-bottom: 10px !important;
     }
     .pl-xl-3,
     .px-xl-3 {
@@ -30235,7 +30235,7 @@ button.bg-dark:focus {
     }
     .pt-xl-5,
     .py-xl-5 {
-        padding-top: 10px !important;
+        padding-top: 18px !important;
     }
     .pr-xl-5,
     .px-xl-5 {
@@ -30243,7 +30243,7 @@ button.bg-dark:focus {
     }
     .pb-xl-5,
     .py-xl-5 {
-        padding-bottom: 10px !important;
+        padding-bottom: 18px !important;
     }
     .pl-xl-5,
     .px-xl-5 {
@@ -30376,7 +30376,7 @@ button.bg-dark:focus {
     }
     .pb-xl-12,
     .py-xl-12 {
-        padding-bottom: 60px !important;
+        padding-bottom: 16px !important;
     }
     .pl-xl-12,
     .px-xl-12 {
@@ -30406,7 +30406,7 @@ button.bg-dark:focus {
     }
     .pt-xl-14,
     .py-xl-14 {
-        padding-top: 40px !important;
+        padding-top: 20px !important;
     }
     .pr-xl-14,
     .px-xl-14 {
@@ -30452,7 +30452,7 @@ button.bg-dark:focus {
     }
     .pb-xl-16,
     .py-xl-16 {
-        padding-bottom: 80px !important;
+        padding-bottom: 20px !important;
     }
     .pl-xl-16,
     .px-xl-16 {
@@ -30558,7 +30558,7 @@ button.bg-dark:focus {
     }
     .pt-xl-22,
     .py-xl-22 {
-        padding-top: 50px !important;
+        padding-top: 20px !important;
     }
     .pr-xl-22,
     .px-xl-22 {
@@ -43138,7 +43138,7 @@ a.text-gDark:hover, a.text-gDark:focus {
 }
 
 .text-dark {
-    color: #06163a !important;
+    color: #286b82 !important;
 }
 
 a.text-dark:hover, a.text-dark:focus {
