--- a/public/css/colors.css
+++ b/public/css/colors.css
@@ -43,12 +43,12 @@
 
 .newsSingleWrap .dropCap, .vssDropdownList li, .ui-widget.ui-slider.ui-slider-horizontal .ui-widget-header, .getDirColumn .ardBadge, .echColumnii .spanLinkGo, .causeSingle .ourCauseColumn[data-featured-tag]:before, #myTab .tablink:before, .widgetWrap.bgTheme, .progressBar .pbCountNumber, .progressBar .percentageProgBar .over, .opbTabset .nav-link.active, .opbTabset .nav-link:hover, .ourPromiseBlock .videoWrap .btnPlay, .ourPromiseBlock .btnPlayHolder:hover .btnPlay:before, .donationForm .customRadioBtnLabel .cuFakeLabel:after, .btnLinkShare:hover, .btnYouPlay, .postNavigatorNav .btnPrev:hover,
 .postNavigatorNav .btnNext:hover, .scgTabList .nav-link:after, .scgTabList.nav-tabs .nav-link:after, .dtlhDress, .ifbFiltersList a:hover, .ifbFiltersList li.active a, .ueEveColumn__list .btnCustomLightOutline:before, .pagination .page-link:hover, .pagination .page-item.active .page-link, .gbfColumn:hover .icnWrap, .infigQuote, .egdColumn .icnWrap, .egdColumn:hover .btn, .mcssList .mcssLink:hover, .erLinksList.bgTheme, .npbTimeTag, .ccwIcn, .ueTimeTag .textDay, .btnPlayLink .icnPlay, .featuresAsideBlock:before, .fflColumn:hover .icnWrap, .hdDropdownList a:hover, .hdDropdownList > li.active > a, .dropdown-submenu.show > .dropdown-item, .dropdown-submenu:hover > .dropdown-item, .hdLangDropdown .dropdown-item:hover, .hdLangDropdown .dropdown-item.active, .ssArrowVii:hover, .progressTheme, .btn-outline-light:hover, .dotsList.dotsListii button:hover, .dotsList.dotsListii li.slick-active button, .btnTheme .btnText, .btnTheme.btnNoOver {
-    background-color: #ff3514;
+    background-color: #286b82;
 }
 
 .nwssHolder .vssOpener.hover, .arddColumnSlider .slick-arrow:hover, .btnLinkShare:hover, .postNavigatorNav .btnPrev:hover,
 .postNavigatorNav .btnNext:hover, .ueEveColumn__list .btnCustomLightOutline:before, .pagination .page-link:hover, .pagination .page-item.active .page-link, .dcsTabset .nav-link:before, .dcsTabset.nav-tabs .nav-link:before, .edupiInfosList .edupiilWrap:before, .timelineList > li:after, .egdColumn:hover .btn, .meetQuote, .navbar-light .pgNavOpener, .btn-outline-light:hover, .btnTheme:before, .btnTheme.btnNoOver:hover, .btnTheme.btnNoOver {
-    border-color: #ff3514;
+    border-color: #286b82;
 }
 
 .newsSingleWrap .tagList a.active, .newsSingleWrap .icnTheme, .causeSingle .icnTheme, #myTab .tablink.active, #myTab .tablink:hover, .govServiceCol .icnWrap, .clientQuoteii:after, .callLink .icn, .callLink:hover, .sectionWrap .habTitle, .ourPromiseBlock .habTitle, .thanksForSupportingBlock .habTitle, .clientQuote q:before, .cartTable .quantity .quantity-button:hover, .quantity .quantity-button:hover, .sdbWDescription .ratingStarList li.active, .ratingStarList li.active a, .ratingStarList li.active, .ratingStarList li a:hover, .reviewSubmissionForm .req, .customCheckboxLabel .cuFakeLabel:after, .btnYouPlay:hover, .newsClassicColumn .icnTheme, .pnnPaginList li > a, .widgetTags a:hover, .widgetTags a.current,
@@ -56,7 +56,7 @@
 .tagList a.current, .widgetUpcoming .icn, .uecTime .textLarge, .gbfColumn .icnWrap, .helpAsideBlock .habTitle, .adminCountsList .textLarge, .tlTimeTitle, .euTitle, .prtColumn .icnWrap, .widgetDepartsNav li a:hover,
 .widgetFiltersNav li a:hover, .widgetDepartsNav li.active > a,
 .widgetFiltersNav li.active > a, .drItemRow .btnDownload, .coDefaultList > li:before, .dcsColumn .icnWrap, .egdColumn:hover .icnWrap, .erLinksList > li > a:hover, .cfbFeatList .icnWrap, .fflColumn .icnWrap, .hdSearchOpener:hover, .mainNavigation .ddohOpener:hover > .nav-link, .mainNavigation.navbar-nav .nav-link:hover, .mainNavigation.navbar-nav .nav-link:focus, .mainNavigation.navbar-nav .nav-link:active, .mainNavigation.navbar-nav .nav-item.active .nav-link, .hdScheduleList .icn, .form-group .req, .btnLink, .btnTheme:before, .btnTheme.btnNoOver:hover {
-    color: #ff3514;
+    color: #ffd100;
 }
 
 .headervi .hdScheduleList .icn,
