--- a/src/Components/css/About.css
+++ b/src/Components/css/About.css
@@ -11,9 +11,9 @@
     padding-bottom: 24px;
     font-size: 40px;
     font-weight: bold;
-    color: #012c6d;
+    color: #286b82;
     text-align: center;
-    font-family: "poppins";
+    font-family: 'Cabin' !important;
     padding: 0px;
     border-radius: 10px;
     text-transform: uppercase;
@@ -25,7 +25,7 @@
     font-size: 22px;
     line-height: 2;
     color: #262626;
-    font-family: unset;
+    font-family: 'Cabin' !important;
     font-weight: 400;
     text-align: center;
     border-radius: 10px;
