--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -6084,7 +6084,7 @@ input[type=button].btn-block {
     color: #fff;
 }
 .navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
-    color: #0067da;
+    color: #f6c93f;
 }
 .navbar-light .navbar-nav .nav-link.disabled {
     color: rgba(0, 0, 0, 0.3);
