--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -3845,9 +3845,14 @@ a.ui-button:active,
     left: 0;
 }
 
+.btn:hover:before {
+    -webkit-transform: translateY(0px) rotateX(0deg);
+    /* transform: translateY(0px) rotateX(0deg); */
+    /* opacity: 1; */
+}
 .btn:before {
-    content: attr(data-hover);
-    -webkit-transform: translateY(50%) rotateX(90deg);
+    /* content: attr(data-hover); */
+    /* -webkit-transform: translateY(50%) rotateX(90deg); */
     transform: translateY(50%) rotateX(90deg);
     opacity: 0;
     border-width: 1px;
@@ -3856,19 +3861,11 @@ a.ui-button:active,
     transform-origin: right center 0;
     -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
-    -webkit-transition: opacity 0.3s ease-in-out,
-        -webkit-transform 0.3s ease-in-out;
+    -webkit-transition: opacity 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
     transition: opacity 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
     transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
-    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out,
-        -webkit-transform 0.3s ease-in-out;
+    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
     padding: 0.626rem 1.1875rem;
-}
-
-.btn:hover:before {
-    -webkit-transform: translateY(0px) rotateX(0deg);
-    transform: translateY(0px) rotateX(0deg);
-    opacity: 1;
 }
 
 .btn:hover .btnText {
